# vibe-check-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
payloads/: error_triggers.txt  exposed_paths.txt  jwt_secrets.txt  secret_patterns.txt
reports/: vibecheck_url.dakshu.in_20260627_153952.html  vibecheck_url.dakshu.in_20260627_153952.json  vibecheck_url.dakshu.in_20260627_155246.html  vibecheck_url.dakshu.in_20260627_155246.json  vibecheck_url.dakshu.in_20260627_160737.json
scanner/: abuse_test.py  cli.py  core_spider.py  headers_audit.py  injection_surface.py  jwt_crack.py  reporter.py  secret_scan.py
